--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@swc/core": "^1.2.153",
+    "@swc/jest": "^0.2.20",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.4.1",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "jest-expo": "~44.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "jest": "^26.6.3",
+    "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
